--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Capstone3
+
+# MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/capstone_3?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=book1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate/JPA
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
