--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=Capstone3
 
 #192.168.11.34
-server.address=0.0.0.0
-server.port=8082
+#server.address=0.0.0.0
+#server.port=8082
 
 # MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3306/capstone_3?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/banking_system?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=B0ch0g
+spring.datasource.password=book1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA
