--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,28 @@
+# ==============================================================
+# Spring Boot Configuration for Mini Banking System (Capstone 3)
+# Author: Baldano, Estrellado, & Tan
+# Version: 2026.02.12
+# ==============================================================
+
 spring.application.name=Capstone3
+server.port=8082
 
-#192.168.11.34
-server.address=0.0.0.0
-server.port=8080
-
-# MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3306/capstone_3?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+# --- MySQL Connection Settings ---
+# Includes auto-create database if it doesn't exist
+spring.datasource.url=jdbc:mysql://localhost:3306/capstone_3?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=B0ch0g
+spring.datasource.password=luistan
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate/JPA
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql= true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# --- JPA / Hibernate Configuration ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+# --- Silence Warnings ---
+# Disables the 'Open-In-View' warning in your console
+spring.jpa.open-in-view=false
+
+# --- Logging ---
+# Keeps you informed on what the database is doing
+logging.level.org.hibernate.SQL=DEBUG
