--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,11 +5,11 @@
 # ==============================================================
 
 spring.application.name=Capstone3
-server.port=8082
+#server.port=8080
 
 # --- MySQL Connection Settings ---
 # Includes auto-create database if it doesn't exist
-spring.datasource.url=jdbc:mysql://localhost:3306/capstone_3?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/banking_system?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=book1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
